# gescpp

./: .gitignore  CMakeLists.txt  CMakeLists_cpp.txt  DecomposableScore.h  README.md  ges.h  main.cpp  setup.py  utils.h
src/: DecomposableScore.h  ges.cpp  ges.h  main.cpp  utils.h
